--- a/src/app/portal/workspace/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/portal/workspace/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -176,9 +176,10 @@
       'text-green-700': availableAmount() > 0,
       'text-red-700': disableButton
     }"
-    >{{ selectedSafePropertyMessage() }}</small
   >
-  <app-button type="submit" [loading]="loading()" [disabled]="disableButton"
-    >{{ receive() ? "Recibir" : "Entregar" }} Transferencia</app-button
-  >
+    {{ selectedSafePropertyMessage() }}
+  </small>
+  <app-button type="submit" [loading]="loading()" [disabled]="disableButton">
+    {{ receive() ? "Recibir" : "Entregar" }} Transferencia
+  </app-button>
 </form>
