--- a/src/app/admin/home/safes/components/transfer-modal/transfer-modal.component.html
+++ b/src/app/admin/home/safes/components/transfer-modal/transfer-modal.component.html
@@ -142,10 +142,19 @@
       </small>
       <hr class="border-neutral-300 my-2 5" />
       <div class="flex flex-col gap-3">
-        <app-button type="submit" [disabled]="submitDisabled">
+        <app-button
+          type="submit"
+          [loading]="loading()"
+          [disabled]="submitDisabled"
+        >
           Guardar
         </app-button>
-        <app-button type="button" color="neutral" (click)="close()">
+        <app-button
+          type="button"
+          color="neutral"
+          [disabled]="loading()"
+          (click)="close()"
+        >
           Cerrar
         </app-button>
       </div>
