--- a/src/app/admin/home/users/list/list.component.html
+++ b/src/app/admin/home/users/list/list.component.html
@@ -1,6 +1,7 @@
 <app-header-title
   hTitle="Usuarios"
   hDescription="Aquí podrás administrar todo tipo de usuarios vinculados con la empresa mediante roles"
+  [return]="true"
 />
 <section class="mt-10">
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
