update: sidebar z-index

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside
-  class="fixed w-[24rem] top-16 right-0 bottom-0 bg-white drop-shadow-xl py-5 px-5 ease-in duration-200 grid grid-rows-[40px_1fr_128px]"
+  class="fixed w-[24rem] z-50 top-16 right-0 bottom-0 bg-white drop-shadow-xl py-5 px-5 ease-in duration-200 grid grid-rows-[40px_1fr_128px]"
   [ngClass]="{ 'translate-x-full': !showSideBar() }"
 >
   <header class="mb-3 relative z-50">
