update: transaction detail for and entry hour form

--- a/src/app/portal/cash-registers/cash-register-opening/entry-time/entry-time.component.html
+++ b/src/app/portal/cash-registers/cash-register-opening/entry-time/entry-time.component.html
@@ -2,7 +2,7 @@
   hTitle="Apertura de caja"
   hDescription="Ingresa tu hora de llegada"
 />
-<section class="w-full max-w-md m-auto">
+<section class="w-full max-w-xl m-auto">
   <app-spinner *ngIf="loading(); else content" />
   <ng-template #content>
     <h3
