--- a/src/app/portal/home/journeys/components/journey-stats/journey-stats.component.html
+++ b/src/app/portal/home/journeys/components/journey-stats/journey-stats.component.html
@@ -2,6 +2,10 @@
   class="text-gray-700 text-xs sm:text-sm md:text-base w-full max-w-xl px-2 mx-auto"
 >
   <app-journey-stat
+    stat="Total de transacciones"
+    [value]="journeys?.totalOfTransactions"
+  />
+  <app-journey-stat
     stat="Total por descontar"
     [value]="journeys?.totalOfDiscounts"
     [currency]="true"
