--- a/src/app/admin/home/users/details/details.component.html
+++ b/src/app/admin/home/users/details/details.component.html
@@ -4,9 +4,7 @@
   [return]="true"
 />
 <app-detail-layout>
-  <app-detail-wrapper headline="Jornadas" [loading]="loading()">
-    <app-journeys-table />
-  </app-detail-wrapper>
+  <app-main-stats />
   <form>
     <label for="month" class="sr-only">Mes y Año</label>
     <input
@@ -17,4 +15,5 @@
       (change)="onChangeMonth($event)"
     />
   </form>
+  <app-journeys-table class="md:col-span-2" />
 </app-detail-layout>
