update: cash register structure page for admins

--- a/src/app/admin/home/cash-registers/details/movements/movements.component.html
+++ b/src/app/admin/home/cash-registers/details/movements/movements.component.html
@@ -1,1 +1,5 @@
-<p>movements works!</p>
+<app-header-title
+  [hTitle]="title()"
+  hDescription="Administración y movimientos de la caja registradora"
+  [return]="true"
+/>
