update: cash register detail summary page

--- a/src/app/admin/home/cash-registers/details/movements/components/date-picker-modal/date-picker-modal.component.html
+++ b/src/app/admin/home/cash-registers/details/movements/components/date-picker-modal/date-picker-modal.component.html
@@ -3,7 +3,7 @@
     <input
       type="date"
       [value]="formattedDate"
-      [max]="formattedDate"
+      [max]="today"
       class="input w-full"
       (change)="onChangeDate($event)"
       [disabled]="loading()"
