--- a/src/app/admin/home/cash-registers/details/summary/summary.component.html
+++ b/src/app/admin/home/cash-registers/details/summary/summary.component.html
@@ -1,6 +1,6 @@
 <app-header-title
   hTitle="Administración de Movimientos"
-  hDescription="Administración y movimientos de la caja registradora"
+  hDescription="Administración de movimientos de caja registradora"
   [return]="true"
 />
 <ng-template #noDetails>
@@ -8,7 +8,7 @@
 </ng-template>
 <app-detail-layout>
   <app-basic-info />
-  <app-quick-actions class="md:row-span-2" />
+  <app-quick-actions />
   <app-hours-stats />
   <app-base-stats />
 </app-detail-layout>
