move: cash registers administration to home

--- a/src/app/admin/home/cash-registers/details/summary/components/final-working-hour-form/final-working-hour-form.component.html
+++ b/src/app/admin/home/cash-registers/details/summary/components/final-working-hour-form/final-working-hour-form.component.html
@@ -1,8 +1,8 @@
 <form class="w-full" [formGroup]="form">
   <div class="grid grid-cols-3">
-    <label for="time" class="font-medium text-lg text-center self-center"
-      >Hora de salida</label
-    >
+    <label for="time" class="font-medium text-lg text-center self-center">
+      Hora de salida
+    </label>
     <input
       type="time"
       id="time"
