--- a/src/app/admin/home/home-shared/components/base-calculator/base-calculator.component.html
+++ b/src/app/admin/home/home-shared/components/base-calculator/base-calculator.component.html
@@ -15,6 +15,7 @@
           class="input max-w-48"
           [formControlName]="base.title"
           placeholder="0"
+          autocomplete="off"
         />
         <div
           class="absolute z-10 right-px top-px h-[calc(100%_-_2px)] w-32 rounded-e-lg px-4 py-2 bg-violet-200"
