add: danger color to buttons

--- a/src/app/admin/administration/cash-registers/details/summary/components/quick-actions/quick-actions.component.html
+++ b/src/app/admin/administration/cash-registers/details/summary/components/quick-actions/quick-actions.component.html
@@ -19,6 +19,7 @@
         type="button"
         [disabled]="closed()"
         (click)="closeModal.open()"
+        color="danger"
       >
         Cerrar caja
       </app-button>
