--- a/src/app/admin/administration/cash-registers/details/summary/summary.component.html
+++ b/src/app/admin/administration/cash-registers/details/summary/summary.component.html
@@ -7,8 +7,9 @@
   <p>No se encontraron movimientos en la fecha seleccionada</p>
 </ng-template>
 <app-detail-layout>
-  <app-basic-info />
+  <app-cashier-stats />
   <app-quick-actions />
   <app-hours-stats />
   <app-base-stats />
+  <app-aperture-stats />
 </app-detail-layout>
