update: cash register detail summary page

--- a/src/app/admin/administration/adm-shared/components/detail-wrapper/detail-wrapper.component.html
+++ b/src/app/admin/administration/adm-shared/components/detail-wrapper/detail-wrapper.component.html
@@ -1,5 +1,8 @@
 <section class="border border-gray-300 rounded-2xl px-7 py-5 size-full">
-  <app-detail-headline [headline]="headline" [align]="align" />
+  <div [ngClass]="{ 'flex items-center gap-5 h-full': return }">
+    <app-return-button *ngIf="return" />
+    <app-detail-headline [headline]="headline" [align]="align" />
+  </div>
   <ng-template #spinner>
     <app-spinner />
   </ng-template>
