--- a/src/app/admin/administration/cash-registers/details/summary/components/quick-actions/quick-actions.component.html
+++ b/src/app/admin/administration/cash-registers/details/summary/components/quick-actions/quick-actions.component.html
@@ -1,4 +1,4 @@
-<app-detail-wrapper headline="Acciones rápidas" [loading]="false">
+<app-detail-wrapper headline="Administración" [loading]="false">
   <ul class="flex flex-col gap-3">
     <li>
       <app-button type="button" (click)="openUpdateInitialBaseModal()">
