--- a/src/app/shared/components/header-title/header-title.component.html
+++ b/src/app/shared/components/header-title/header-title.component.html
@@ -1,14 +1,7 @@
 <header
   class="border-b-2 border-neutral-300 mb-5 py-4 px-6 -ml-6 w-[calc(100%_+_3rem)] flex items-center gap-5"
 >
-  <button
-    *ngIf="return"
-    class="flex items-center justify-center bg-white border shadow-sm shadow-violet-300 rounded-full p-3 size-8 md:p-6 md:size-12 text-gray-700 hover:text-violet-700 hover:shadow-md duration-100"
-    title="Volver atrás"
-    (click)="goToBack()"
-  >
-    <fa-icon [icon]="faReturn" class="text-sm md:text-xl" />
-  </button>
+  <app-return-button *ngIf="return" />
   <div>
     <h2
       class="text-xl sm:text-2xl md:text-3xl text-gray-700 font-medium text-pretty"
