--- a/src/app/admin/administration/cash-registers/details/summary/components/journey-stats/journey-stats.component.html
+++ b/src/app/admin/administration/cash-registers/details/summary/components/journey-stats/journey-stats.component.html
@@ -1,6 +1,16 @@
 <app-detail-wrapper headline="Jornada" [loading]="loading()">
   <ul class="flex flex-col gap-1">
     <app-detail-stat-inline
+      headline="Número de Caja"
+      [stat]="reports()?.reports?.cashRegisterDetail?.cashRegister?.numeral"
+      [pipe]="undefined"
+    />
+    <app-detail-stat-inline
+      headline="Estado de Caja"
+      [stat]="reports()?.reports?.cashRegisterDetail?.cashRegister?.status"
+      pipe="cashRegister"
+    />
+    <app-detail-stat-inline
       headline="Transacciones"
       [stat]="reports()?.reports?.transactionsAmount"
       [pipe]="undefined"
@@ -30,5 +40,31 @@
       [stat]="reports()?.reports?.cashRegisterDetail?.finalWorking"
       pipe="time"
     />
+    <app-detail-stat-inline
+      headline="Base Inicial"
+      [stat]="reports()?.reports?.cashRegisterDetail?.initialBase"
+      pipe="currency"
+    />
+    <app-detail-stat-inline
+      headline="Base Final"
+      [stat]="reports()?.reports?.cashRegisterDetail?.finalBase"
+      pipe="currency"
+    />
+    <li
+      class="text-sm sm:text-base md:text-lg text-gray-700 px-2 py-1 rounded-lg hover:bg-violet-50"
+    >
+      <ng-container
+        *ngIf="
+          reports()?.reports?.cashRegisterDetail?.baseObservation !== '';
+          else noObservation
+        "
+      >
+        Observación
+        <span class="text-pretty text-base">{{
+          reports()?.reports?.cashRegisterDetail?.baseObservation
+        }}</span>
+      </ng-container>
+      <ng-template #noObservation> Sin observaciones </ng-template>
+    </li>
   </ul>
 </app-detail-wrapper>
