add: movements tables for cash register detail summary page

--- a/src/app/admin/administration/cash-registers/details/summary/summary.component.html
+++ b/src/app/admin/administration/cash-registers/details/summary/summary.component.html
@@ -5,4 +5,5 @@
 <app-detail-layout>
   <app-journey-stats />
   <app-quick-actions />
+  <app-movements-tables class="sm:col-span-2" />
 </app-detail-layout>
