fix: wrong property

--- a/src/app/admin/administration/cash-registers/details/summary/components/journey-stats/journey-stats.component.html
+++ b/src/app/admin/administration/cash-registers/details/summary/components/journey-stats/journey-stats.component.html
@@ -22,7 +22,7 @@
     />
     <app-detail-stat-inline
       headline="Retiros"
-      [stat]="reports()?.reports?.deposits"
+      [stat]="reports()?.reports?.withdrawals"
       pipe="currency"
     />
     <app-detail-stat-inline
