--- a/src/app/admin/dashboard/components/header-stats/header-stats.component.html
+++ b/src/app/admin/dashboard/components/header-stats/header-stats.component.html
@@ -1,8 +1,12 @@
 <header
   class="relative pt-9 pb-10 px-12 w-full border-t-0 border-b-2 border-x-2 border-violet-100 bg-violet-100 rounded-bl-3xl rounded-br-3xl"
 >
-  <div class="flex items-center justify-between mb-5 w-full">
-    <h2 class="uppercase text-3xl font-medium text-gray-700">
+  <section
+    class="flex flex-col md:flex-row md:items-center md:justify-between mb-5 w-full gap-2"
+  >
+    <h2
+      class="text-xl sm:text-2xl md:text-3xl text-center md:text-left font-medium text-violet-700"
+    >
       Panel de Estadísticas
     </h2>
     <input
@@ -12,12 +16,14 @@
       [(ngModel)]="date"
       (ngModelChange)="setDate()"
     />
-  </div>
-  <div class="flex items-center justify-between gap-7">
+  </section>
+  <div
+    class="grid grid-cols-[repeat(auto-fit,_minmax(11rem,_1fr))] gap-x-7 gap-y-5"
+  >
     <app-header-stat-card
       stat="Saldo Total"
       [value]="dashboard()?.totalBalance"
-      color="green"
+      [color]="dashboard()?.totalBalance ?? 0 > 0 ? 'green' : 'red'"
     />
     <app-header-stat-card
       stat="Gastos"
