--- a/src/app/admin/administration/platforms/details/details.component.html
+++ b/src/app/admin/administration/platforms/details/details.component.html
@@ -1,5 +1,5 @@
 <app-header-title
-  [hTitle]="details()?.platform?.name"
+  [hTitle]="details()?.platform?.platformName"
   hDescription="Administra tus saldos y transferencias realizadas a la plataforma"
   [return]="true"
 />
